--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -1,51 +1,52 @@
 .features {
     padding-top: 94px;
+
+    &__list {
+        display: flex;
+        gap: 30px;
+    }
+    
+    &__item::before {
+        content: "";
+        border-radius: 4px;
+        background: $team;
+        width: 270px;
+        height: 120px;
+        display: block;
+        background-image: url(../img/antenna.jpg);
+        background-repeat:no-repeat ;
+        background-position: center;
+        margin-bottom: 30px;
+    }
+    
+    &__item:nth-child(2)::before {
+        background-image: url(../img/clock.jpg);
+    }
+    
+    &__item:nth-child(3)::before {
+        background-image: url(../img/diagram.jpg);
+    }
+    
+    &__item:nth-child(4)::before {
+        background-image: url(../img/astronaut.jpg);
+    }
+    
+    &__title {
+        color: $nav-list-link;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.14;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    }
+    
+    &__text {
+        color: $contacts-list-link;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71; /* 171.429% */
+    letter-spacing: 0.42px;
+    }
 }
 
-.features-list {
-    display: flex;
-    gap: 30px;
-}
-
-.features-item::before {
-    content: "";
-    border-radius: 4px;
-    background: #F5F4FA;
-    width: 270px;
-    height: 120px;
-    display: block;
-    background-image: url(../img/antenna.jpg);
-    background-repeat:no-repeat ;
-    background-position: center;
-    margin-bottom: 30px;
-}
-
-.features-item:nth-child(2)::before {
-    background-image: url(../img/clock.jpg);
-}
-
-.features-item:nth-child(3)::before {
-    background-image: url(../img/diagram.jpg);
-}
-
-.features-item:nth-child(4)::before {
-    background-image: url(../img/astronaut.jpg);
-}
-
-.features-title {
-    color: var(--nav-list-link);
-font-size: 14px;
-font-weight: 700;
-line-height: 1.14;
-letter-spacing: 0.42px;
-text-transform: uppercase;
-margin-bottom: 10px;
-}
-
-.features-text {
-    color: var(--contacts-list-link);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-}
