--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,176 +1,177 @@
 .footer {
-    background-color: var(--footer);
+    background-color: $footer;
     padding-top: 60px;
     padding-bottom: 60px;
-}
 
-.footer-box {
-    display: flex;
-    gap: 70px;
-}
-
-.footer-logo {
-    color: var(--logo);
-    font-family: Raleway;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.38;
-    letter-spacing: 0.78px;
+    &__box {
+        display: flex;
+        gap: 70px;
     }
     
-    .logo-footer {
-    color: var(--white);
-    font-family: Raleway;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.38;
-    letter-spacing: 0.78px;
-    }
-
-    .addres {
-        margin-top: 20px;
-        font-style: normal;
-    }
-
-.footer-addres {
-color: var(--white);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-margin-bottom: 9px;
-margin-top: 20px;
-}
-
-.addres-list {
-    margin-top: 9px;
-}
-
-.addres-item {
+    &__logo {
+        color: $logo;
+        font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.38;
+        letter-spacing: 0.78px;
+        }
+        
+        &__footer {
+        color: $white;
+        font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.38;
+        letter-spacing: 0.78px;
+        }
+    
+        .addres {
+            margin-top: 20px;
+            font-style: normal;
+        }
+    
+    &__addres {
+    color: $white;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71; /* 171.429% */
+    letter-spacing: 0.42px;
     margin-bottom: 9px;
-}
-
-.addres-item:last-child {
-    margin-bottom: 0px;
-}
-
-.addres-link {
-color: rgba(255, 255, 255, 0.60);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-}
-
-.footer-title {
-    color: var(--white);
-font-size: 14px;
-font-weight: 700;
-line-height: 1.14;
-letter-spacing: 0.42px;
-text-transform: uppercase;
-margin-bottom: 20px;
-}
-
-.footer-list {
-    display: flex;
-    gap: 10px;
-}
-
-.social-link {
-    padding: 12px;
-    background-color: rgba(255, 255, 255, 0.10);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.social-link:hover {
-    background-color: var(--logo);
-}
-
-.footer-icon{
-    fill: var(--white);
-    width: 20px;
-height: 20px;
-}
-
-.social-link:hover,
- .social-link:focus {
-  border-radius: 50%;
-  outline: none;
-  background-color: var(--logo);
-  transition-property: background-color ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  .footer-icon {
-    fill: var(--white);
-    transition-property: fill ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  }
-}
-
-
-.newsletter-title {
-    color: var(--white);
+    margin-top: 20px;
+    }
+    
+    .addres__list {
+        margin-top: 9px;
+    }
+    
+    .addres__item {
+        margin-bottom: 9px;
+    }
+    
+    .addres__item:last-child {
+        margin-bottom: 0px;
+    }
+    
+    .addres__link {
+    color: $gr;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71; /* 171.429% */
+    letter-spacing: 0.42px;
+    }
+    
+    &__title {
+        color: $white;
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
     letter-spacing: 0.42px;
     text-transform: uppercase;
-}
-
-.newsletter-form {
+    margin-bottom: 20px;
+    }
+    
+    &__list {
+        display: flex;
+        gap: 10px;
+    }
+    
+    .social__link {
+        padding: 12px;
+        background-color: $grad;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .social__link:hover {
+        background-color: $logo;
+    }
+    
+    &__icon{
+        fill: $white;
+        width: 20px;
+    height: 20px;
+    }
+    
+    .social__link:hover,
+     .social__link:focus {
+      border-radius: 50%;
+      outline: none;
+      background-color: $logo;
+      transition-property: background-color ;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-delay: 0;
+      &__icon {
+        fill: $white;
+        transition-property: fill ;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-delay: 0;
+      }
+    }
+    
+    
+    .newsletter__title {
+        color: $white;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 1.14;
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+    }
+    
+    .newsletter__form {
+        display: flex;
+        gap: 20px;
+        align-items: flex-end;
+    }
+    
+    
+    .newsletter__input {
+        border-radius: 4px;
+    border: 1px solid $gradi;
+    background: $gradie;
+    box-shadow: 0px 4px 4px 0px $gradien;
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    margin-top: 20px;
+    display: block;
+    color: $white;
+    outline: none;
+    }
+    
+    .newsletter__button{
+        border-radius: 4px;
+    background: $logo;
+    box-shadow: 0px 4px 4px 0px $gradien;
+    color: $white;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.87; /* 187.5% */
+    letter-spacing: 0.96px;
+    border: none;
     display: flex;
-    gap: 20px;
-    align-items: flex-end;
+    align-items: center;
+    /* padding-left: 28px;
+    padding-right: 62px; */
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+    outline: none;
+    }
+    
+    .newsletter__svg {
+        fill: $white;
+        width: 24px;
+    height: 24px;
+    }
 }
 
-
-.newsletter-input {
-    border-radius: 4px;
-border: 1px solid rgba(255, 255, 255, 0.30);
-background: rgba(33, 150, 243, 0.00);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-width: 358px;
-height: 50px;
-padding-left: 16px;
-margin-top: 20px;
-display: block;
-color: var(--white);
-outline: none;
-}
-
-.newsletter-button{
-    border-radius: 4px;
-background: #2196F3;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-color: var(--white);
-font-size: 16px;
-font-weight: 700;
-line-height: 1.87; /* 187.5% */
-letter-spacing: 0.96px;
-border: none;
-display: flex;
-align-items: center;
-/* padding-left: 28px;
-padding-right: 62px; */
-width: 200px;
-height: 50px;
-justify-content: center;
-align-items: center;
-display: flex;
-gap: 10px;
-cursor: pointer;
-outline: none;
-}
-
-.newsletter-svg {
-    fill: var(--white);
-    width: 24px;
-height: 24px;
-}
