--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,143 +1,166 @@
 .header {
     padding-top: 24px;
     padding-bottom: 25px;
-    border-bottom: solid 1px var(--line);
-}
+    border-bottom: solid 1px $line;
 
-.header .container{
-    display: flex;
-}
-
-.header-nav{
-    display: flex;
-    margin-right:auto;
-}
-
-.header-logo {
-color: var(--logo);
-font-family: Raleway;
-font-size: 26px;
-font-weight: 700;
-line-height: 1.38;
-letter-spacing: 0.78px;
-margin-right: 93px;
-}
-
-.header-span {
-color: var(--text-color);
-font-family: Raleway;
-font-size: 26px;
-font-weight: 700;
-line-height: 1.38;
-letter-spacing: 0.78px;
-}
-
-.nav-list {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-}
-
-.contacts-link:hover,
-.nav-link:hover {
-    color: var(--logo);
-}
-
-.nav-item {
-    position: relative;
-}
-
-.nav-link {
-color: var(--nav-list-link);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--logo);
-   transition-property: color;
-   transition-duration: 250ms;
-   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-   transition-delay: 0;
-}
-
-.header-list {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-}
-
-.header-item {
-    margin-bottom: 0;
-    margin-right: 30px;
-}
-
-.header-link {
-    gap: 10px;
-    display: flex;
-    align-items: center;
-}
-
-.header-link:hover {
-    .header-contact {
-        fill: var(--logo);
+&__,.container{
+        display: flex;
     }
-    .header-cont {
-        color: var(--logo);
+
+    &__nav{
+        display: flex;
+        margin-right:auto;
     }
+
+    &__logo {
+        color: $logo;
+        font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.38;
+        letter-spacing: 0.78px;
+        margin-right: 93px;
+        }
+        
+        &__span {
+        color: $text-color;
+        font-family: Raleway;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.38;
+        letter-spacing: 0.78px;
+        }
+        
+        .nav__list {
+            display: flex;
+            gap: 50px;
+            align-items: center;
+        }
+        
+        .contacts__link:hover,
+        .nav__link:hover {
+            color: $logo;
+        }
+        
+        .nav__item {
+            position: relative;
+        }
+        
+        .nav__link {
+        color: $nav-list-link;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.28px;
+        }
+        
+        .nav__link:hover,
+        .nav__link:focus {
+          color: $logo;
+           transition-property: color;
+           transition-duration: 250ms;
+           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+           transition-delay: 0;
+        }
+        
+        .header__list {
+            display: flex;
+            gap: 50px;
+            align-items: center;
+        }
+        
+        .header__item {
+            margin-bottom: 0;
+            margin-right: 30px;
+        }
+        
+        .header__link {
+            gap: 10px;
+            display: flex;
+            align-items: center;
+        }
+        
+        .header:hover {
+            &__contact {
+                fill: $logo;
+            }
+            &__cont {
+                color: $logo;
+            }
+        }
+        
+        .header__link:hover,
+        .header__link:focus {
+          transition-property: color ;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-delay: 0;
+          color: $logo;
+          
+          .header__contact {
+            fill: $logo;
+            transition-property: fill ;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-delay: 0;
+          }
+        
+          .header__cont {
+            transition-property: color ;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-delay: 0;
+            color: $logo;
+          }
+        }
+        
+        .header__contact {
+        fill: $contacts-list-link;
+        width: 16px;
+        height: 12px;
+        }
+        
+        .header__item:nth-child(2) .header__contact {
+            width: 10px;
+            height: 16px;
+        }
+        
+        .header__cont {
+        color: $contacts-list-link;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.28px;
+        }
+        
+        .header__cont:hover {
+            color: $logo;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.28px;
+        }
+
+        .current {
+            color: $logo;
+        }
+        
+            .current::after {
+                content: "";
+                width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background: $logo;
+        display: block;
+        position: absolute;
+        top: 48px;
+        left: 0;
+        box-sizing: border-box;
+            }
+
 }
 
-.header-link:hover,
-.header-link:focus {
-  transition-property: color ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  color: var(--logo);
-  
-  .header-contact {
-    fill: var(--logo);
-    transition-property: fill ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  }
 
-  .header-cont {
-    transition-property: color ;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-    color: var(--logo);
-  }
-}
 
-.header-contact {
-fill: var(--contacts-list-link);
-width: 16px;
-height: 12px;
-}
 
-.header-item:nth-child(2) .header-contact {
-    width: 10px;
-    height: 16px;
-}
 
-.header-cont {
-color: var(--contacts-list-link);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px;
-}
-
-.header-cont:hover {
-    color: var(--logo);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px;
-}
