--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -2,36 +2,36 @@
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../img/hero.jpg);
+    background-image: linear-gradient($gradient, $gradient), url(../img/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-}
 
-.hero-title {
-color: var(--white);
-text-align: center;
-font-size: 44px;
-font-weight: 900;
-line-height: 1.36; /* 136.364% */
-letter-spacing: 2.64px;
-text-transform: uppercase;
-width: 696px;
-margin-bottom: 30px;
-margin-left: auto;
-margin-right: auto ;
-}
-
-.hero-btn {
-color: var(--white);
-text-align: center;
-font-size: 16px;
-font-weight: 700;
-line-height: 1.87; /* 187.5% */
-letter-spacing: 0.96px;
-background-color: var(--logo);
-padding: 10px 32px;
-border-radius: 4px;
-border: none;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-cursor: pointer;
+    &__title {
+        color: $white;
+        text-align: center;
+        font-size: 44px;
+        font-weight: 900;
+        line-height: 1.36; /* 136.364% */
+        letter-spacing: 2.64px;
+        text-transform: uppercase;
+        width: 696px;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto ;
+        }
+        
+        &__btn {
+        color: $white;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 1.87; /* 187.5% */
+        letter-spacing: 0.96px;
+        background-color: $logo;
+        padding: 10px 32px;
+        border-radius: 4px;
+        border: none;
+        box-shadow: 0px 4px 4px 0px $rg;
+        cursor: pointer;
+        }
 }
