--- a/scss/sections/_team.scss
+++ b/scss/sections/_team.scss
@@ -1,99 +1,100 @@
 .team {
     padding-top: 94px;
     padding-bottom: 94px;
-    background-color: var(--team);
+    background-color: $team;
+
+    &__title {
+        color: $nav-list-link;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.16;
+        letter-spacing: 1.08px;
+        margin-bottom: 50px;
+        }
+        
+        &__list {
+            display: flex;
+            gap: 30px;
+        }
+        
+        &__item {
+            background-color: $white;
+            border-radius: 0px 0px 4px 4px;
+            box-shadow: 0px 1px 3px 0px $rga, 0px 1px 1px 0px $rgb, 0px 2px 1px 0px $rgba;
+        }
+        
+        /* .team-img {
+            
+        } */
+        
+        &__box {
+            padding-top: 30px;
+            padding-bottom: 16px;
+        }
+        
+        &__caption {
+            color: $nav-list-link;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.18;
+        letter-spacing: 0.48px;
+        margin-bottom: 10px;
+        }
+        
+        &__text {
+        color: $contacts-list-link;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.18;
+        letter-spacing: 0.48px;
+        }
+        
+        .social {
+            justify-content: center;
+            display: flex;
+            gap: 10px;
+            margin-bottom: 30px;
+        }
+        
+        .team__link:hover {
+            background-color: $logo;
+            .team__svg {
+                fill: $white;
+            }
+        }
+        
+        .team__link {
+            width: 44px;
+            height: 44px;
+            padding: 12px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .team__link:hover,
+         .team__link:focus {
+          border-radius: 50%;
+          background-color: $logo;
+          transition-property: background-color ;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-delay: 0;
+          .team__svg {
+            fill: $white;
+            transition-property: fill ;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-delay: 0;
+          }
+        }
+        
+        .team__svg {
+            fill: $media;
+        }
 }
 
-.team-title {
-color: var(--nav-list-link);
-text-align: center;
-font-size: 36px;
-font-weight: 700;
-line-height: 1.16;
-letter-spacing: 1.08px;
-margin-bottom: 50px;
-}
-
-.team-list {
-    display: flex;
-    gap: 30px;
-}
-
-.team-item {
-    background-color: var(--white);
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
-}
-
-/* .team-img {
-    
-} */
-
-.team-box {
-    padding-top: 30px;
-    padding-bottom: 16px;
-}
-
-.team-caption {
-    color: var(--nav-list-link);
-text-align: center;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.18;
-letter-spacing: 0.48px;
-margin-bottom: 10px;
-}
-
-.team-text {
-color: var(--contacts-list-link);
-text-align: center;
-font-size: 16px;
-font-weight: 400;
-line-height: 1.18;
-letter-spacing: 0.48px;
-}
-
-.social {
-    justify-content: center;
-    display: flex;
-    gap: 10px;
-    margin-bottom: 30px;
-}
-
-.team-link:hover {
-    background-color: var(--logo);
-    .team-svg {
-        fill: var(--white);
-    }
-}
-
-.team-link {
-    width: 44px;
-    height: 44px;
-    padding: 12px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.team-link:hover,
- .team-link:focus {
-  border-radius: 50%;
-  background-color: var(--logo);
-  transition-property: background-color ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  .team-svg {
-    fill: var(--white);
-    transition-property: fill ;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
-  }
-}
-
-.team-svg {
-    fill: var(--media);
-}
