--- a/scss/sections/_modal.scss
+++ b/scss/sections/_modal.scss
@@ -23,9 +23,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  }
-  
-  &__btn {
+
+  .model__btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -209,12 +208,9 @@
   cursor: pointer;
   outline: none;
   }
+  
+  }
+  
 
-
-
-    /* .current:last-child::after {
-        width: 78px;
-height: 4px;
-    } */
   }
   
