--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -33,3 +33,4 @@ $text-color:#000000;
     $gradie:rgba(33, 150, 243, 0.00);
     $gradien:rgba(0, 0, 0, 0.15);
     $gradient:rgba(0, 0, 0, 0.10);
+    $nwhite:#EEE;
