--- a/scss/portfolio-sections/_services-paragraph.scss
+++ b/scss/portfolio-sections/_services-paragraph.scss
@@ -1,5 +1,5 @@
-.services-paragraph {
-    color: var(--white);
+.services__paragraph {
+    color: $white;
     font-size: 18px;
     font-style: 1.55;
     font-weight: 400;
