--- a/scss/portfolio-sections/_btn.scss
+++ b/scss/portfolio-sections/_btn.scss
@@ -1,6 +1,6 @@
 .btn:hover {
     cursor: pointer;
-    background-color: var(--logo);
+    background-color: $logo;
     color: var(--white);
     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
@@ -9,7 +9,7 @@
     border: none;
     border-radius: 4px;
     padding: 6px 22px;
-    color: var(--nav-list-link);
+    color: $nav-list-link;
 text-align: center;
 font-family: Roboto;
 font-size: 16px;
@@ -21,11 +21,11 @@ letter-spacing: 0.48px;
 
 .btn:hover,
 .btn:focus {
-  background-color: var(--logo);
+  background-color: $logo;
   border: none;
   outline: transparent;
   border-radius: 4px;
-  color: var(--white);
+  color: $white;
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1),
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
      transition-property: background-color, color, box-shadow ;
