--- a/scss/portfolio-sections/_services-caption.scss
+++ b/scss/portfolio-sections/_services-caption.scss
@@ -1,5 +1,5 @@
-.services-caption {
-    color: var(--nav-list-link);
+.services__caption {
+    color: $nav-list-link;
     font-size: 18px;
     font-weight: 700;
     line-height: 2; /* 200% */
