--- a/scss/portfolio-sections/_services-text.scss
+++ b/scss/portfolio-sections/_services-text.scss
@@ -1,5 +1,5 @@
-.services-text {
-    color: var(--contacts-list-link);
+.services__text {
+    color: $contacts-list-link;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.87; /* 187.5% */
