--- a/style/main.css
+++ b/style/main.css
@@ -607,11 +607,13 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.backdrop .is__hidden {
+
+.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop .modal {
+
+.modal {
   padding: 40px;
   background-color: #FFFFFF;
   position: absolute;
@@ -619,7 +621,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.backdrop .modal .model__btn {
+
+.model-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -632,23 +635,27 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none;
 }
-.backdrop .modal .btn__svg {
+
+.btn-svg {
   width: 11px;
   height: 11px;
 }
-.backdrop .modal .btn__svg:hover {
+
+.btn-svg:hover {
   fill: #2196F3;
   cursor: pointer;
 }
-.backdrop .modal__btn:hover .btn__svg, .backdrop .modal__btn:focus .btn__svg {
+
+.model-btn:hover .btn-svg, .model-btn:focus .btn-svg {
   fill: #2196F3;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.backdrop .modal__title {
-  color: var(--nav-list-link);
+
+.modal-title {
+  color: #212121;
   font-size: 20px;
   font-weight: 700;
   line-height: 1.15;
@@ -656,15 +663,17 @@ img {
   text-align: center;
   margin-bottom: 12px;
 }
-.backdrop .modal__lab {
-  color: var(--contacts-list-link);
+
+.modal-lab {
+  color: #757575;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.16;
   letter-spacing: 0.12px;
   border: none;
 }
-.backdrop .modal__inp {
+
+.modal-inp {
   display: block;
   width: 448px;
   height: 40px;
@@ -675,10 +684,12 @@ img {
   margin-top: 4px;
   outline: none;
 }
-.backdrop .modal__inp:hover {
+
+.modal-inp:hover {
   border: none;
 }
-.backdrop .modal__coment {
+
+.model-coment {
   display: block;
   width: 448px;
   height: 120px;
@@ -690,63 +701,75 @@ img {
   margin-top: 4px;
   outline: none;
 }
-.backdrop .modal__box {
+
+.modal-box {
   position: relative;
 }
-.backdrop .modal__box:hover__inp, .backdrop .modal__box:focus__inp {
+
+.modal-box:hover .modal-inp, .modal-box:focus .modal-inp {
   border: 1px solid #2196F3;
 }
-.backdrop .modal__box:hover__svg, .backdrop .modal__box:focus__svg {
+.modal-box:hover .model-svg, .modal-box:focus .model-svg {
   fill: #2196F3;
 }
-.backdrop .modal__inp:hover + .backdrop .modal__svg, .backdrop .modal__inp:focus + .backdrop .modal__svg {
+
+.modal-inp:hover + .model-svg, .modal-inp:focus + .model-svg {
   fill: #2196F3;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.backdrop .modal__svg {
+
+.model-svg {
   width: 18px;
   height: 18px;
   top: 53%;
   left: 12px;
   position: absolute;
 }
-.backdrop .modal__us {
+
+.modal-us {
   width: 18px;
   height: 18px;
 }
-.backdrop .modal__lab:hover__coment, .backdrop .modal__lab:focus__coment {
+
+.modal-lab:hover .model-coment, .modal-lab:focus .model-coment {
   border: 1px solid #2196F3;
 }
-.backdrop .modal__btn:hover .btn__svg, .backdrop .modal__btn:focus .btn__svg {
+
+.model-btn:hover .btn-svg, .model-btn:focus .btn-svg {
   fill: #2196F3;
 }
-.backdrop .modal__inp:hover, .backdrop .modal__inp:focus {
+
+.modal-inp:hover, .modal-inp:focus {
   border-color: #2196F3;
 }
-.backdrop .modal__chek {
+
+.modal-chek {
   width: 16px;
   height: 16px;
   margin-right: 8px;
   outline: none;
 }
-.backdrop .modal .check {
+
+.check {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 34px;
 }
-.backdrop .modal .check__text {
-  color: var(--contacts-list-link);
+
+.check-text {
+  color: #757575;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.42px;
   width: 400px;
 }
-.backdrop .modal .check__link {
+
+.check-link {
   color: #2196F3;
   font-size: 14px;
   font-weight: 400;
@@ -754,10 +777,12 @@ img {
   letter-spacing: 0.42px;
   text-decoration-line: underline;
 }
-.backdrop .modal__btn {
+
+.modal-btn {
   text-align: center;
 }
-.backdrop .modal .check__btn {
+
+.check-btn {
   color: #FFFFFF;
   text-align: center;
   font-size: 16px;
@@ -773,14 +798,35 @@ img {
   outline: none;
 }
 
-.portfolio-section {
+.current {
+  color: #2196F3;
+}
+
+.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #2196F3;
+  display: block;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  box-sizing: border-box;
+}
+
+/* .current:last-child::after {
+      width: 78px;
+height: 4px;
+  } */
+.portfolio__section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .btn:hover {
   cursor: pointer;
-  background-color: var(--logo);
+  background-color: #2196F3;
   color: var(--white);
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
@@ -789,7 +835,7 @@ img {
   border: none;
   border-radius: 4px;
   padding: 6px 22px;
-  color: var(--nav-list-link);
+  color: #212121;
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
@@ -801,11 +847,11 @@ img {
 
 .btn:hover,
 .btn:focus {
-  background-color: var(--logo);
+  background-color: #2196F3;
   border: none;
   outline: transparent;
   border-radius: 4px;
-  color: var(--white);
+  color: #FFFFFF;
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
@@ -813,19 +859,19 @@ img {
   transition-delay: 0;
 }
 
-.buttons-list {
+.buttons__list {
   display: flex;
   justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
 }
 
-.services-im {
+.services__im {
   position: relative;
   overflow: hidden;
 }
 
-.services-im:hover .services-paragraph {
+.services__im:hover .services__paragraph {
   opacity: 1;
   transform: translate(0);
   transition-property: transform;
@@ -834,7 +880,7 @@ img {
   overflow: hidden;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   /* max-width: 1200px;
@@ -842,19 +888,19 @@ img {
   gap: 30px;
 }
 
-.services-item {
+.services__item {
   /* width: 370px;
   height: 404px;
   flex-shrink: 0; */
   flex-basis: calc((100% - 60px) / 3);
   border: 1px solid #EEE;
-  background: #FFF;
+  background: #FFFFFF;
   position: relative;
 }
 
 .services-item:hover {
   border: 1px solid #EEE;
-  background: #FFF;
+  background: #FFFFFF;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
   transition-property: box-shadow;
   transition-duration: 250ms;
@@ -874,8 +920,8 @@ img {
   overflow: hidden;
 }
 
-.services-paragraph {
-  color: var(--white);
+.services__paragraph {
+  color: #FFFFFF;
   font-size: 18px;
   font-style: 1.55;
   font-weight: 400;
@@ -898,28 +944,28 @@ img {
   overflow: hidden;
 }
 
-.services-box {
+.services__box {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
 }
 
-.services-caption {
-  color: var(--nav-list-link);
+.services__caption {
+  color: #212121;
   font-size: 18px;
   font-weight: 700;
   line-height: 2; /* 200% */
   letter-spacing: 1.08px;
 }
 
-.services-img {
+.services__img {
   display: block;
   width: 100%;
 }
 
-.services-text {
-  color: var(--contacts-list-link);
+.services__text {
+  color: #757575;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.87; /* 187.5% */
