--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -29,6 +29,26 @@
         .addres {
             margin-top: 20px;
             font-style: normal;
+
+            &__list {
+                margin-top: 9px;
+            }
+            
+            &__item {
+                margin-bottom: 9px;
+            }
+            
+            &__item:last-child {
+                margin-bottom: 0px;
+            }
+            
+            &__link {
+            color: $gr;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.71; /* 171.429% */
+            letter-spacing: 0.42px;
+            }
         }
     
     &__addres {
@@ -41,25 +61,7 @@
     margin-top: 20px;
     }
     
-    .addres__list {
-        margin-top: 9px;
-    }
-    
-    .addres__item {
-        margin-bottom: 9px;
-    }
-    
-    .addres__item:last-child {
-        margin-bottom: 0px;
-    }
-    
-    .addres__link {
-    color: $gr;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.71; /* 171.429% */
-    letter-spacing: 0.42px;
-    }
+
     
     &__title {
         color: $white;
@@ -112,66 +114,71 @@
       transition-delay: 0;
       }
     }
-    
-    
-    .newsletter__title {
+
+    .newsletter {
+        
+        &__title {
+            color: $white;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 1.14;
+            letter-spacing: 0.42px;
+            text-transform: uppercase;
+        }
+        
+        &__form {
+            display: flex;
+            gap: 20px;
+            align-items: flex-end;
+        }
+        
+        
+        &__input {
+            border-radius: 4px;
+        border: 1px solid $gradi;
+        background: $gradie;
+        box-shadow: 0px 4px 4px 0px $gradien;
+        width: 358px;
+        height: 50px;
+        padding-left: 16px;
+        margin-top: 20px;
+        display: block;
         color: $white;
-        font-size: 14px;
+        outline: none;
+        }
+        
+        &__button{
+            border-radius: 4px;
+        background: $logo;
+        box-shadow: 0px 4px 4px 0px $gradien;
+        color: $white;
+        font-size: 16px;
         font-weight: 700;
-        line-height: 1.14;
-        letter-spacing: 0.42px;
-        text-transform: uppercase;
-    }
-    
-    .newsletter__form {
+        line-height: 1.87; /* 187.5% */
+        letter-spacing: 0.96px;
+        border: none;
         display: flex;
-        gap: 20px;
-        align-items: flex-end;
+        align-items: center;
+        /* padding-left: 28px;
+        padding-right: 62px; */
+        width: 200px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        gap: 10px;
+        cursor: pointer;
+        outline: none;
+        }
+        
+        &__svg {
+            fill: $white;
+            width: 24px;
+        height: 24px;
+        }
     }
     
     
-    .newsletter__input {
-        border-radius: 4px;
-    border: 1px solid $gradi;
-    background: $gradie;
-    box-shadow: 0px 4px 4px 0px $gradien;
-    width: 358px;
-    height: 50px;
-    padding-left: 16px;
-    margin-top: 20px;
-    display: block;
-    color: $white;
-    outline: none;
-    }
     
-    .newsletter__button{
-        border-radius: 4px;
-    background: $logo;
-    box-shadow: 0px 4px 4px 0px $gradien;
-    color: $white;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.87; /* 187.5% */
-    letter-spacing: 0.96px;
-    border: none;
-    display: flex;
-    align-items: center;
-    /* padding-left: 28px;
-    padding-right: 62px; */
-    width: 200px;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    gap: 10px;
-    cursor: pointer;
-    outline: none;
-    }
-    
-    .newsletter__svg {
-        fill: $white;
-        width: 24px;
-    height: 24px;
-    }
 }
 
