--- a/scss/sections/_modal.scss
+++ b/scss/sections/_modal.scss
@@ -95,7 +95,7 @@ border: none;
 }
 
 
-.model__coment {
+&__coment {
   display: block;
   width: 448px;
 height: 120px;
@@ -143,7 +143,7 @@ position: relative;
 }
 
 &__lab:hover, &__lab:focus {
-  .model__coment {
+  &__coment {
       border: 1px solid $logo;
   }
 }
@@ -170,45 +170,49 @@ position: relative;
   align-items: center;
   justify-content: center;
   margin-bottom: 34px;
+
+  &__text {
+    color: $contacts-list-link;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
+  width: 400px;
+  }
+  
+  &__link {
+    color: $logo;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
+  text-decoration-line: underline;
+  }
+
+  &__btn {
+    color: $white;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.96px;
+  padding: 10px 53px;
+  border-radius: 4px;
+  background: $logo;
+  box-shadow: 0px 4px 4px 0px $gradien;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  }
 }
 
-.check__text {
-  color: $contacts-list-link;
-font-size: 14px;
-font-weight: 400;
-line-height: 1.7;
-letter-spacing: 0.42px;
-width: 400px;
-}
 
-.check__link {
-  color: $logo;
-font-size: 14px;
-font-weight: 400;
-line-height: 1.7;
-letter-spacing: 0.42px;
-text-decoration-line: underline;
-}
 
 &__btn {
   text-align: center;
 }
 
-.check__btn {
-  color: $white;
-text-align: center;
-font-size: 16px;
-font-weight: 700;
-line-height: 1.8;
-letter-spacing: 0.96px;
-padding: 10px 53px;
-border-radius: 4px;
-background: $logo;
-box-shadow: 0px 4px 4px 0px $gradien;
-border: none;
-cursor: pointer;
-outline: none;
-}
+
 
 .current {
   color: $logo;
