--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -33,4 +33,7 @@ $text-color:#000000;
     $gradie:rgba(33, 150, 243, 0.00);
     $gradien:rgba(0, 0, 0, 0.15);
     $gradient:rgba(0, 0, 0, 0.10);
+    $b:rgba(0, 0, 0, 0.12);
+    $bo:rgba(0, 0, 0, 0.06);
+    $box:rgba(0, 0, 0, 0.16);
     $nwhite:#EEE;
