--- a/scss/portfolio-sections/_btn.scss
+++ b/scss/portfolio-sections/_btn.scss
@@ -1,7 +1,7 @@
 .btn:hover {
     cursor: pointer;
     background-color: $logo;
-    color: var(--white);
+    color: $white;
     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
