--- a/scss/portfolio-sections/_services-item.scss
+++ b/scss/portfolio-sections/_services-item.scss
@@ -11,7 +11,7 @@ position: relative;
 .services-item:hover {
     border: 1px solid $nwhite;
     background: $white;
-    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px 0px $b, 0px 4px 4px 0px $bo, 1px 4px 6px 0px $box;
     transition-property: box-shadow ;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -21,7 +21,7 @@ position: relative;
     }
 }
 
-  .services-item:hover .services-paragraph {
+  .services-item:hover, .services-paragraph {
     opacity: 1;
   transform: translate(0);
    transition-property: transform;
