--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -77,19 +77,24 @@
         display: flex;
         gap: 10px;
     }
-    
-    .social__link {
-        padding: 12px;
-        background-color: $grad;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+
+    .social {
+
+        &__link {
+            padding: 12px;
+            background-color: $grad;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        &__link:hover {
+            background-color: $logo;
+        }
     }
     
-    .social__link:hover {
-        background-color: $logo;
-    }
+    
     
     &__icon{
         fill: $white;
