--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -31,22 +31,21 @@
         letter-spacing: 0.78px;
         }
         
-        .nav__list {
+        .nav {
             display: flex;
             gap: 50px;
             align-items: center;
-        }
-        
-        .contacts__link:hover,
-        .nav__link:hover {
+
+            .contacts__link:hover,
+            &__link:hover {
             color: $logo;
         }
         
-        .nav__item {
+        &__item {
             position: relative;
         }
         
-        .nav__link {
+        &__link {
         color: $nav-list-link;
         font-size: 14px;
         font-weight: 500;
@@ -54,14 +53,17 @@
         letter-spacing: 0.28px;
         }
         
-        .nav__link:hover,
-        .nav__link:focus {
+        &__link:hover,
+        &__link:focus {
           color: $logo;
            transition-property: color;
            transition-duration: 250ms;
            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
            transition-delay: 0;
         }
+        }
+        
+        
         
         &__list {
             display: flex;
