--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -17,7 +17,7 @@
         letter-spacing: 0.78px;
         }
         
-        &__footer {
+        .logo__footer {
         color: $white;
         font-family: Raleway;
         font-size: 26px;
