--- a/style/main.css
+++ b/style/main.css
@@ -448,7 +448,7 @@ img {
   line-height: 1.38;
   letter-spacing: 0.78px;
 }
-.footer__footer {
+.footer .logo__footer {
   color: #FFFFFF;
   font-family: Raleway;
   font-size: 26px;
