--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./base/container";
 @import "./base/reset";
 @import "./base/variables";
+@import "./untils/mixin";
 @import "./sections/header";
 @import "./sections/hero";
 @import "./sections/features";
