--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -1,5 +1,9 @@
 .features {
-    padding-top: 94px;
+    padding-top: 60px;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+    }
 
     &__list {
         display: flex;
@@ -10,13 +14,24 @@
         content: "";
         border-radius: 4px;
         background: $team;
-        width: 270px;
         height: 120px;
         display: block;
         background-image: url(../img/antenna.jpg);
         background-repeat:no-repeat ;
         background-position: center;
         margin-bottom: 30px;
+
+        @media screen and (min-width: 480px) {
+            width: 450px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            width: 354px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: 270px;
+        }
     }
     
     &__item:nth-child(2)::before {
