--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -6,16 +6,16 @@
     @media screen and (min-width: 480px) {
         padding-top: 10px;
         padding-bottom: 10px;
+      }
+  
+      @media screen and (min-width: 768px) {
+      padding-top: 21px;
+      padding-bottom: 21px;
     }
-
-    @media screen and (min-width: 768px) {
-        padding-top: 21px;
-        padding-bottom: 21px;
-    }
-
+  
     @media screen and (min-width: 1200px) {
-        padding-top: 25px;
-        padding-bottom: 25px;
+      padding-top: 25px;
+      padding-bottom: 25px;
     }
 
 &__,.container{
@@ -29,25 +29,24 @@
 
     &__logo {
         color: $logo;
-        font-family: Raleway;
+        font-family: "Raleway";
         font-size: 24px;
         font-weight: 700;
         line-height: 1.38;
         letter-spacing: 0.72px;
 
         @media screen and (min-width: 480px) {
-font-size: 24px;
-letter-spacing: 0.72px;
+  
         }
-
+      
         @media screen and (min-width: 768px) {
-            margin-right: 88px;
+          margin-right: 88px;
         }
-
+      
         @media screen and (min-width: 1200px) {
-            font-size: 26px;
-            letter-spacing: 0.78px;
-            margin-right: 93px;
+          font-size: 26px;
+             letter-spacing: 0.78px;
+             margin-right: 93px;
         }
         }
         
@@ -109,21 +108,21 @@ letter-spacing: 0.72px;
         &__list {
             display: none;
             margin-left: auto;
-        
-             @media screen and (min-width: 480px) {
-              display: none;
-            }
-        
-             @media screen and (min-width: 768px) {
-              display: flex;
-              gap: 10px;
-              flex-direction: column;
-            }
-        
-             @media screen and (min-width: 1200px) {
-              gap: 30px;
-              flex-direction: row;
-            }
+
+            @media screen and (min-width: 480px) {
+                display: none;
+              }
+          
+               @media screen and (min-width: 768px) {
+                display: flex;
+                gap: 10px;
+                flex-direction: column;
+              }
+          
+               @media screen and (min-width: 1200px) {
+                gap: 30px;
+                flex-direction: row;
+              }
           }
           
         &__item {
