--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -1,19 +1,33 @@
 .features {
     padding-top: 60px;
-
+    padding-bottom: 60px;
+  
     @media screen and (min-width: 1200px) {
-        padding-top: 94px;
+      padding-top: 94px;
+      padding-bottom: 0;
     }
+  
 
     &__list {
         display: flex;
+    flex-direction: column;
         gap: 30px;
-    }
+
+        @media screen and (min-width: 768px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+          }
+      
+          @media screen and (min-width: 1200px) {
+            flex-direction: row;
+          }
+        }
     
     &__item::before {
         content: "";
         border-radius: 4px;
         background: $team;
+        width: 450px;
         height: 120px;
         display: block;
         background-image: url(../img/antenna.jpg);
@@ -21,17 +35,15 @@
         background-position: center;
         margin-bottom: 30px;
 
-        @media screen and (min-width: 480px) {
-            width: 450px;
-        }
-    
         @media screen and (min-width: 768px) {
             width: 354px;
-        }
-    
-        @media screen and (min-width: 1200px) {
+            height: 120px;
+          }
+      
+          @media screen and (min-width: 1200px) {
             width: 270px;
-        }
+            height: 120px;
+          }
     }
     
     &__item:nth-child(2)::before {
@@ -54,6 +66,10 @@
     letter-spacing: 0.42px;
     text-transform: uppercase;
     margin-bottom: 10px;
+
+    @media screen and (min-width: 768px) {
+        text-align: start;
+      }
     }
     
     &__text {
@@ -62,6 +78,14 @@
     font-weight: 400;
     line-height: 1.71; /* 171.429% */
     letter-spacing: 0.42px;
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
     }
 }
 
