--- a/style/main.css
+++ b/style/main.css
@@ -311,20 +311,35 @@ img {
 
 .features {
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .features {
     padding-top: 94px;
+    padding-bottom: 0;
   }
 }
 .features__list {
   display: flex;
+  flex-direction: column;
   gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .features__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__list {
+    flex-direction: row;
+  }
 }
 .features__item::before {
   content: "";
   border-radius: 4px;
   background: #F5F4FA;
+  width: 450px;
   height: 120px;
   display: block;
   background-image: url(../img/antenna.jpg);
@@ -332,19 +347,16 @@ img {
   background-position: center;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 480px) {
-  .features__item::before {
-    width: 450px;
-  }
-}
 @media screen and (min-width: 768px) {
   .features__item::before {
     width: 354px;
+    height: 120px;
   }
 }
 @media screen and (min-width: 1200px) {
   .features__item::before {
     width: 270px;
+    height: 120px;
   }
 }
 .features__item:nth-child(2)::before {
@@ -365,6 +377,11 @@ img {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
+@media screen and (min-width: 768px) {
+  .features__title {
+    text-align: start;
+  }
+}
 .features__text {
   color: #757575;
   font-size: 14px;
@@ -372,10 +389,27 @@ img {
   line-height: 1.71; /* 171.429% */
   letter-spacing: 0.42px;
 }
+@media screen and (min-width: 768px) {
+  .features__text {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__text {
+    width: 270px;
+  }
+}
 
 .work {
   padding-top: 94px;
   padding-bottom: 94px;
+  text-align: center;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 .work__title {
   color: #212121;
@@ -416,30 +450,65 @@ img {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #F5F4FA;
   /* .team-img {
 
   } */
 }
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .team__title {
   color: #212121;
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
   line-height: 1.16;
-  letter-spacing: 1.08px;
-  margin-bottom: 50px;
+  letter-spacing: 0.84px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    letter-spacing: 1.08px;
+    margin-bottom: 50px;
+  }
 }
 .team__list {
   display: flex;
   gap: 30px;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__list {
+    flex-wrap: nowrap;
+  }
 }
 .team__item {
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    flex-basis: calc((100% - 90px) / 4);
+  }
 }
 .team__box {
   padding-top: 30px;
@@ -509,16 +578,34 @@ img {
 .clients__title {
   color: #212121;
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
   line-height: 1.16;
-  letter-spacing: 1.08px;
+  letter-spacing: 0.84px;
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    letter-spacing: 1.08px;
+  }
 }
 .clients__list {
   display: flex;
   gap: 30px;
   justify-content: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .clients__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    flex-wrap: nowrap;
+  }
 }
 .clients__link {
   padding: 16px 32px;
